--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Geddam jaswanth.me",
+  "name": "jaswanth.me",
   "private": true,
   "description": "My personal portfolio website",
   "version": "2.0.1",
-  "author": "Geddam jaswanth",
+  "author": "jaswanth",
   "dependencies": {
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.23",
